--- a/package.json
+++ b/package.json
@@ -16,22 +16,29 @@
     "dependencies": {
         "@supabase/ssr": "latest",
         "@supabase/supabase-js": "latest",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "lucide-react": "^0.323.0",
         "next": "14.1.0",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss": "^3.3.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
+        "cssnano": "^6.0.3",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "postcss": "^8",
         "prettier": "^3.2.5",
-        "tailwindcss": "^3.3.0",
+        "prettier-plugin-tailwindcss": "^0.5.11",
         "typescript": "^5"
     }
 }
