--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "types:gen": "supabase gen types typescript --project-id meudxrcsglqhfsylqmhs --schema public > utils/supabase/entity.types.ts",
         "format:check": "prettier --cache --check --log-level warn .",
         "format:fix": "prettier --cache --write --log-level warn ."
     },
