--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+# without trailing slash
+BASE_URL=http://localhost:3000
