--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "qrcode.react": "^3.1.0",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.50.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss": "^3.3.0",
         "tailwindcss-animate": "^1.0.7"
