--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "react-hook-form": "^7.50.1",
         "tailwind-merge": "^2.2.1",
         "tailwindcss": "^3.3.0",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/uuid": "^9.0.8",
         "autoprefixer": "^10.0.1",
         "cssnano": "^6.0.3",
         "eslint": "^8",
