--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@supabase/supabase-js": "latest",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "date-fns": "^3.3.1",
         "lucide-react": "^0.323.0",
         "next": "14.1.0",
         "qrcode.react": "^3.1.0",
