--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dependencies": {
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toggle": "^1.0.3",
+        "@radix-ui/react-toggle-group": "^1.0.4",
         "@supabase/ssr": "latest",
         "@supabase/supabase-js": "latest",
         "class-variance-authority": "^0.7.0",
