chore: rename env variable -> `BASE_URL` -> `NEXT_PUBLIC_BASE_URL`

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # without trailing slash
-BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
