--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "format:fix": "prettier --cache --write --log-level warn ."
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.1.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toggle": "^1.0.3",
