--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "tailwind-merge": "^2.2.1",
         "tailwindcss": "^3.3.0",
         "tailwindcss-animate": "^1.0.7",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/node": "^20",
