--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@dnd-kit/core": "^6.1.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-toggle-group": "^1.0.4",
         "@supabase/ssr": "latest",
