--- a/package.json
+++ b/package.json
@@ -54,5 +54,11 @@
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.11",
         "typescript": "^5"
+    },
+    "engines": {
+        "node": ">=18.0.0 < 19.0.0"
+    },
+    "volta": {
+        "node": "18.20.2"
     }
 }
