chore: reformat code

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,13 @@
     "printWidth": 120,
     "semi": true,
     "tabWidth": 4,
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": ["prettier-plugin-tailwindcss"],
+    "overrides": [
+        {
+            "files": ["*.json", "*.yaml", "*.yml"],
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
