chore: add missing env variable to `.env.example` file

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_KEY=
 
 # without trailing slash
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
