--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "2.45.4",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
-    "lucide-react": "^0.323.0",
+    "lucide-react": "^0.447.0",
     "next": "14.1.1",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "zustand": "^4.5.2"
@@ -45,16 +45,16 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "cssnano": "^6.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "typescript": "^5"
+    "eslint-plugin-import": "^2.31.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": ">=20.0.0 < 21.0.0"
