--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "zustand": "^4.5.2"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
