feat(user): add socials icons

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ SUPABASE_SERVICE_KEY=
 
 # without trailing slash
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+NEXT_PUBLIC_SOCIAL_FACEBOK=
+NEXT_PUBLIC_SOCIAL_INSTAGRAM=
+NEXT_PUBLIC_SOCIAL_YOUTUBE=
