--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "typescript": "^5.6.2"
   },
   "engines": {
-    "node": ">=20.0.0 < 21.0.0"
+    "node": ">=20.0.0 < 21.0.0",
+    "pnpm": ">=10.0.0"
   },
   "volta": {
-    "node": "20.14.0"
+    "node": "20.14.0",
+    "pnpm": "10.9.2"
   }
 }
