--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "@types/node": "^22.19.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
