--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "types:gen": "supabase gen types typescript --project-id meudxrcsglqhfsylqmhs --schema public > utils/supabase/entity.types.ts",
     "types:check": "tsc --noEmit",
     "format:check": "prettier --cache --check --log-level warn .",
-    "format:fix": "prettier --cache --write --log-level warn ."
+    "format:fix": "prettier --cache --write --log-level warn .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -37,15 +40,20 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.53.0",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.19.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
@@ -55,6 +63,8 @@
     "eslint-config-next": "16.0.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.31.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
